--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -5,10 +5,11 @@ ENV METEORD_DIR /opt/meteord
 COPY scripts $METEORD_DIR
 
 ARG NODE_VERSION
-ENV NODE_VERSION ${NODE_VERSION:-8.9.4}
-ONBUILD ENV NODE_VERSION ${NODE_VERSION:-8.9.4}
+ENV NODE_VERSION ${NODE_VERSION:-8.11.1}
+ONBUILD ENV NODE_VERSION ${NODE_VERSION:-8.11.1}
 
 RUN bash $METEORD_DIR/lib/install_base.sh
+RUN bash $METEORD_DIR/lib/install_additional.sh
 RUN bash $METEORD_DIR/lib/install_node.sh
 RUN bash $METEORD_DIR/lib/install_phantomjs.sh
 RUN bash $METEORD_DIR/lib/cleanup.sh
