--- a/binbuild/Dockerfile
+++ b/binbuild/Dockerfile
@@ -1,8 +1,8 @@
-FROM abernix/meteord:base
+FROM wsoul/meteord:base
 MAINTAINER Jesse Rosenberger
 
 ARG NODE_VERSION
-ENV NODE_VERSION ${NODE_VERSION:-8.9.4}
+ENV NODE_VERSION ${NODE_VERSION:-8.11.1}
 
 COPY scripts/install_binbuild_tools.sh $METEORD_DIR/install_binbuild_tools.sh
 COPY scripts/rebuild_npm_modules.sh $METEORD_DIR/rebuild_npm_modules.sh
